--- a/web/perfilUsuario.xhtml
+++ b/web/perfilUsuario.xhtml
@@ -6,6 +6,6 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <f:view>
-    <h:outputLabel value=""/>
+    <h:outputLabel value="Perfil Ususario"/>
 </f:view>
 </html>
