actualizacion de peoplebean

--- a/web/perfilUsuario.xhtml
+++ b/web/perfilUsuario.xhtml
@@ -17,7 +17,7 @@
          #{person.lastNameP}
          <br>
          </br>
-         <f:facet name="header">Apellido Materno</f:facet>}
+         <f:facet name="header">Apellido Materno</f:facet>
          #{person.lastNameM}
          <br>
          </br>
@@ -31,6 +31,8 @@
          </br>
          <f:facet name="header">Usuario</f:facet>
          #{person.username}
+         <br>
+         </br>
          <f:facet name="header">Contraseña</f:facet>
          #{person.password}
      </h:column>
