--- a/web/perfilUsuario.xhtml
+++ b/web/perfilUsuario.xhtml
@@ -8,25 +8,35 @@
 <f:view>
     <h:outputLabel value="Perfil Ususario"/>
     <h:dataTable value="#{peopleBean.person}" var="person">
-     <h:column>
+        <h:form>
          <f:facet name="header">Nombres</f:facet>
          #{person.firstName}
-         <br></br>
-         <br></br>
-         <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
          <f:facet name="header">Apellido Paterno</f:facet>
          #{person.lastNameP}
+         <br>
+         </br>
          <f:facet name="header">Apellido Materno</f:facet>
          #{person.lastNameM}
+         <br>
+         </br>
+         <br>
+         </br>
          <f:facet name="header">Pais de Origen</f:facet>
          #{person.country}
+         <br></br>
          <f:facet name="header">Correo Electronico</f:facet>
          #{person.email}
+         <br></br>
          <f:facet name="header">Usuario</f:facet>
          #{person.username}
+         <br></br>
          <f:facet name="header">Contraseña</f:facet>
          #{person.password}
-</h:column>
+         <br></br>
+        </h:form>
     </h:dataTable>
 </f:view>
 </html>
