se modifico el new person

--- a/web/newPerson.xhtml
+++ b/web/newPerson.xhtml
@@ -44,7 +44,7 @@
         <br></br>
         <h:commandButton id="registroButton"
                          value="Registrar"
-                         action="#{login.doValidateInput}"/>
+                         action="#{peopleBean.createPerson}"/>
 
 
 
