--- a/web/inicio.xhtml
+++ b/web/inicio.xhtml
@@ -7,5 +7,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <f:view>
     <h:outputLabel value=""/>
+    <h:commandButton value="REGISTRO" action="newPerson"/>
+    <h:commandButton value="INICIO SESION" action="index"/>
 </f:view>
 </html>
