--- a/web/perfilUsuario.xhtml
+++ b/web/perfilUsuario.xhtml
@@ -6,27 +6,34 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <f:view>
+    <h:form>
     <h:outputLabel value="Perfil Ususario"/>
-    <h:dataTable value="#{peopleBean.person}" var="person">
-        <h:column>
-        <f:facet name="header">Nombres</f:facet>
-        #{person.firstName}
         <br></br>
         <br></br>
         <br></br>
-        <f:facet name="header">Apellido Paterno</f:facet>
-        #{person.lastNameP}
-        <f:facet name="header">Apellido Materno</f:facet>
-        #{person.lastNameM}
-        <f:facet name="header">Pais de Origen</f:facet>
-        #{person.country}
-        <f:facet name="header">Correo Electronico</f:facet>
-        #{person.email}
-        <f:facet name="header">Usuario</f:facet>
-        #{person.username}
-        <f:facet name="header">Contraseña</f:facet>
-        #{person.password}
-    </h:column>
-    </h:dataTable>
+    <h:outputLabel value="Nombre:  #{peopleBean.person.firstName} "/>
+        <br></br>
+        <br></br>
+    <h:outputLabel value="Apellido Paterno:  #{peopleBean.person.lastNameP}" />
+        <br></br>
+        <br></br>
+    <h:outputLabel value="Apellido Materno:  #{peopleBean.person.lastNameM}" />
+        <br></br>
+        <br></br>
+    <h:outputLabel value="Pais de Origen:   #{peopleBean.person.country}" />
+        <br></br>
+        <br></br>
+        <h:outputLabel value="Correo Electronico:   #{peopleBean.person.email}" />
+        <br></br>
+        <br></br>
+    <h:outputLabel value="Usuario:   #{peopleBean.person.username} " />
+        <br></br>
+        <br></br>
+    <h:outputLabel value="Contraseña:   #{peopleBean.person.password}" />
+        <br></br>
+        <br></br>
+    <h:commandButton value="Editar" action="#{peopleBean.editPerson(peopleBean)}"/>
+
+    </h:form>
 </f:view>
 </html>
