--- a/web/categoria.xhtml
+++ b/web/categoria.xhtml
@@ -6,7 +6,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <f:view>
-    <h:outputLabel value="Hello, world"/>
+    <h:outputLabel value=""/>
     <h:form>
         <h:commandButton value="MUSICA" action="musica"/>
         <h:commandButton value="SERIE" action="serie"/>
