--- a/web/invalid.xhtml
+++ b/web/invalid.xhtml
@@ -10,7 +10,7 @@
     <h:outputLabel value="invalid password"/>
     <h:form>
 
-        <h:commandButton value="Retry" action="index"/>
+        <h:commandButton value="Retry" action="login"/>
     </h:form>
 </f:view>
 </html>
