--- a/web/sala.xhtml
+++ b/web/sala.xhtml
@@ -6,11 +6,9 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <f:view>
-
-    <h:outputLabel value=""/>
-    <h:form>
-    <h:commandButton value="REGISTRO" action="newPerson"/>
-    <h:commandButton value="INICIO SESION" action="index"/>
-    </h:form>
+    <h:outputLabel value="Nombre:  #{peopleBean.person.firstName} "/>
+    <h:outputLabel value="Puntos: #{}"
+    <br></br>
+    <br></br>
 </f:view>
 </html>
