--- a/web/newPerson.xhtml
+++ b/web/newPerson.xhtml
@@ -37,8 +37,12 @@
         <br></br>
         <br></br>
         <br></br>
+        <!--<h:outputLabel value="Cormpany" for=""/>
+        <h:inputText value="#{peopleBean.person.email}" id="email"/>
+        <br></br>
+        <br></br>-->
         <h:outputLabel value="Contraseña" for="password"/>
-        <h:inputSecret value="#{peopleBean.password}" id="password"/>
+        <h:inputSecret value="#{peopleBean.person.password}" id="password"/>
         <br></br>
         <br></br>
         <br></br>
