Se modifico newperson

--- a/web/newPerson.xhtml
+++ b/web/newPerson.xhtml
@@ -8,32 +8,32 @@
 <f:view>
     <h:form>
     <h:outputLabel value="Nombre" for="firstName"/>
-        <h:inputText value="#{peopleBean.firstName}" id="firstName"/>
+        <h:inputText value="#{peopleBean.person.firstName}" id="firstName"/>
         <br></br>
         <br></br>
         <br></br>
         <h:outputLabel value="Apellido Paterno" for="lastNameP"/>
-        <h:inputText value="#{peopleBean.lastNameP}" id="lastNameP"/>
+        <h:inputText value="#{peopleBean.person.lastNameP}" id="lastNameP"/>
         <br></br>
         <br></br>
         <br></br>
         <h:outputLabel value="Apellido Materno" for="lastNameM"/>
-        <h:inputText value="#{peopleBean.lastNameM}" id="lastNameM"/>
+        <h:inputText value="#{peopleBean.person.lastNameM}" id="lastNameM"/>
         <br></br>
         <br></br>
         <br></br>
         <h:outputLabel value="Pais" for="country"/>
-        <h:inputText value="#{peopleBean.country}" id="country"/>
+        <h:inputText value="#{peopleBean.person.country}" id="country"/>
         <br></br>
         <br></br>
         <br></br>
         <h:outputLabel value="Nombre de Usuario" for="username"/>
-        <h:inputText value="#{peopleBean.username}" id="username"/>
+        <h:inputText value="#{peopleBean.person.username}" id="username"/>
         <br></br>
         <br></br>
         <br></br>
         <h:outputLabel value="Correo Electronico" for="email"/>
-        <h:inputText value="#{peopleBean.email}" id="email"/>
+        <h:inputText value="#{peopleBean.person.email}" id="email"/>
         <br></br>
         <br></br>
         <br></br>
