--- a/web/newPerson.xhtml
+++ b/web/newPerson.xhtml
@@ -7,33 +7,33 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <f:view>
     <h:form>
-    <h:outputLabel value="Nombre" for="firstName"/>
-        <h:inputText value="#{peopleBean.person.firstName}" id="firstName"/>
+        <h:outputLabel value="Nombre" for="firstName"/>
+        <h:inputText value="#{peopleBean.firstName}" id="firstName"/>
         <br></br>
         <br></br>
         <br></br>
         <h:outputLabel value="Apellido Paterno" for="lastNameP"/>
-        <h:inputText value="#{peopleBean.person.lastNameP}" id="lastNameP"/>
+        <h:inputText value="#{peopleBean.lastNameP}" id="lastNameP"/>
         <br></br>
         <br></br>
         <br></br>
         <h:outputLabel value="Apellido Materno" for="lastNameM"/>
-        <h:inputText value="#{peopleBean.person.lastNameM}" id="lastNameM"/>
+        <h:inputText value="#{peopleBean.lastNameM}" id="lastNameM"/>
         <br></br>
         <br></br>
         <br></br>
         <h:outputLabel value="Pais" for="country"/>
-        <h:inputText value="#{peopleBean.person.country}" id="country"/>
+        <h:inputText value="#{peopleBean.country}" id="country"/>
         <br></br>
         <br></br>
         <br></br>
         <h:outputLabel value="Nombre de Usuario" for="username"/>
-        <h:inputText value="#{peopleBean.person.username}" id="username"/>
+        <h:inputText value="#{peopleBean.username}" id="username"/>
         <br></br>
         <br></br>
         <br></br>
         <h:outputLabel value="Correo Electronico" for="email"/>
-        <h:inputText value="#{peopleBean.person.email}" id="email"/>
+        <h:inputText value="#{peopleBean.email}" id="email"/>
         <br></br>
         <br></br>
         <br></br>
@@ -42,7 +42,7 @@
         <br></br>
         <br></br>-->
         <h:outputLabel value="Contraseña" for="password"/>
-        <h:inputSecret value="#{peopleBean.person.password}" id="password"/>
+        <h:inputSecret value="#{peopleBean.password}" id="password"/>
         <br></br>
         <br></br>
         <br></br>
