Se instanció: Person person = new Person();

--- a/web/newPerson.xhtml
+++ b/web/newPerson.xhtml
@@ -13,7 +13,7 @@
         <br></br>
         <br></br>
         <h:outputLabel value="Apellido Paterno" for="lastNameP"/>
-        <h:inputText value="#{peopleBean.lastNameP}" id="lastNameP"/>
+        <h:inputText value="#{peopleBean.lastNameF}" id="lastNameP"/>
         <br></br>
         <br></br>
         <br></br>
@@ -28,7 +28,7 @@
         <br></br>
         <br></br>
         <h:outputLabel value="Nombre de Usuario" for="username"/>
-        <h:inputText value="#{peopleBean.username}" id="username"/>
+        <h:inputText value="#{peopleBean.userName}" id="username"/>
         <br></br>
         <br></br>
         <br></br>
