Se creo una instancia en el CompaniesBean.

--- a/web/editPerson.xhtml
+++ b/web/editPerson.xhtml
@@ -13,7 +13,7 @@
         <br></br>
         <br></br>
         <h:outputLabel value="Apellido Paterno" for="lastNameP"/>
-        <h:inputText id="lastNameP" value="#{peopleBean.lastNameP}"/>
+        <h:inputText id="lastNameP" value="#{peopleBean.lastNameF}"/>
         <br></br>
         <br></br>
         <h:outputLabel value="Apellido Materno" for="lastNameM"/>
@@ -29,7 +29,7 @@
         <br></br>
         <br></br>
         <h:outputLabel value="Usuario" for="username"/>
-        <h:inputText id="username" value="#{peopleBean.username}"/>
+        <h:inputText id="username" value="#{peopleBean.userName}"/>
         <br></br>
         <br></br>
         <h:outputLabel value="Contraseña" for="password"/>
