--- a/web/login.xhtml
+++ b/web/login.xhtml
@@ -4,12 +4,24 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:b="http://bootsfaces.net/ui">
+<head>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"/>
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="application/javascript"/>
+
+</head>
 <f:view>
     <h:messages/>
     <h:form>
         <h:outputLabel value="User Name" for="userName"/>
-        <h:inputText value="#{login.userName}" id="userName"
+        <b:inputText value="#{login.userName}" id="userName"
                      validatorMessage="Please name must have between 4 and 16 characters"
                      required="true"
                      requiredMessage="User name cannot be blank">
@@ -17,21 +29,21 @@
             <br></br>
             <br></br>
             <br></br>
-        </h:inputText>
+        </b:inputText>
         <br></br>
         <br></br>
         <br></br>
         <h:outputLabel value="Password" for="password"/>
-        <h:inputSecret value="#{login.password}" id="password"
+        <b:inputSecret value="#{login.password}" id="password"
                        validatorMessage="Please password must have between 4 and 16 characters"
                        required="true"
                        requiredMessage="Password cannot be blank">
             <f:validateLength minimum="4" maximum="16" for="password"/>
-        </h:inputSecret>
+        </b:inputSecret>
         <br></br>
         <br></br>
         <br></br>
-        <h:commandButton id="loginButton"
+        <b:commandButton id="loginButton"
                          value="Login"
                          action="#{login.doValidateInput}"/>
 
