--- a/web/perfilUsuario.xhtml
+++ b/web/perfilUsuario.xhtml
@@ -11,25 +11,25 @@
         <br></br>
         <br></br>
         <br></br>
-    <h:inputText value="#{peopleBean.firstName} "/>
+    <h:outputLabel value="#{peopleBean.firstName} "/>
         <br></br>
         <br></br>
-    <h:outputLabel value="Apellido Paterno:  #{peopleBean.lastNameF}" />
+    <h:outputLabel value="  #{peopleBean.lastNameF}" />
         <br></br>
         <br></br>
-    <h:outputLabel value="Apellido Materno:  #{peopleBean.lastNameM}" />
+    <h:outputLabel value="  #{peopleBean.lastNameM}" />
         <br></br>
         <br></br>
-    <h:outputLabel value="Pais de Origen:   #{peopleBean.country}" />
+    <h:outputLabel value="  #{peopleBean.country}" />
         <br></br>
         <br></br>
-        <h:outputLabel value="Correo Electronico:   #{peopleBean.email}" />
+        <h:outputLabel value="   #{peopleBean.email}" />
         <br></br>
         <br></br>
-    <h:outputLabel value="Usuario:   #{peopleBean.userName} " />
+    <h:outputLabel value="  #{peopleBean.userName} " />
         <br></br>
         <br></br>
-    <h:outputLabel value="Contraseña:   #{peopleBean.password}" />
+    <h:outputLabel value="  #{peopleBean.password}" />
         <br></br>
         <br></br>
     <h:commandButton value="Editar" action="#{peopleBean.editPerson(person)}"/>
