Se modifico el face config para que pueda linkearse a las demás vistas

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -24,8 +24,28 @@
         <br></br>
         <br></br>
         <b:commandButton  value="REGISTRO" action="newPerson" />
-
+<td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
         <b:commandButton value="INICIO SESION" action="login"/>
+        <br></br>
+        <br></br>
+        <a title="UTP" href="https://www.utp.edu.pe" target="_blank"><img src="imagenes/utp_logo.jpg" alt="UTP" width="150" height="150" /></a>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <a title="UTP" href="https://www.bbvacontinental.pe" target="_blank"><img src="imagenes/logo_bbva.jpg" alt="UTP" width="150" height="150"/></a>
+
     </h:form>
 </f:view>
 </html>
