--- a/web/perfilUsuario.xhtml
+++ b/web/perfilUsuario.xhtml
@@ -5,9 +5,10 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
+
 <f:view>
     <h:form>
-    <h:outputLabel value="PERFIL USUARIO"/>
+    <h:outputLabel value="PERFIL USUARIO"/> <td></td>  <td></td>    <h:commandButton value="Cerrar Sesión" action="index"/>
         <br></br>
         <br></br>
         <br></br>
@@ -33,6 +34,7 @@
         <br></br>
         <br></br>
     <h:commandButton value="Editar" action="#{peopleBean.editPerson(person)}"/>
+
 
     </h:form>
 </f:view>
