--- a/web/perfilUsuario.xhtml
+++ b/web/perfilUsuario.xhtml
@@ -4,9 +4,29 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:b="http://bootsfaces.net/ui">
+<h:head>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+    <!-- Optional theme -->
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"/>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            type="application/javascript"/>
 
-<f:view>
+</h:head>
+<h:head>
+    <b:navBar>
+        <b:navbarLinks>
+            <b:navLink value="Perfil" href="perfilUsuario.xhtml"></b:navLink>
+            <b:navLink value="Ranking" href="ranking.xhtml"></b:navLink>
+            <b:navLink value="Categoria" href="category.xhtml"></b:navLink>
+            <b:navLink value="Cerrar Session" href="index.xhtml"></b:navLink>
+        </b:navbarLinks>
+    </b:navBar>
     <h:form>
     <h:outputLabel value="PERFIL USUARIO"/> <td></td>  <td></td>    <h:commandButton value="Cerrar Sesión" action="index"/>
         <br></br>
@@ -34,8 +54,6 @@
         <br></br>
         <br></br>
     <h:commandButton value="Editar" action="#{peopleBean.editPerson(person)}"/>
-
-
     </h:form>
-</f:view>
+</h:head>
 </html>
