creacion salaserie creacion trivia mejora salamusic

--- a/web/createTrivia.xhtml
+++ b/web/createTrivia.xhtml
@@ -28,24 +28,24 @@
             <b:navLink value="Cerrar Session" href="index.xhtml"></b:navLink>
         </b:navbarLinks>
     </b:navBar>
-    <b:image name="test" value="imagenes/foto.jpg"/>
-    <br></br>
-    <h:outputLabel value="Nombre:  #{peopleBean.firstName} "/>
-    <br></br>
-    <h:outputLabel value="Puntos: 1324"/> <td></td><td></td><h:commandButton value="CREAR JUEGO" action="createTrivia"/>
-    <br></br>
-    <br></br>
     <table width="575" border="2" cellspacing="2">
         <tr align="center" valign="middle">
             <th colspan="4">PARTICIPANTES</th>
         </tr>
     </table>
     <br></br>
-    <b:image name="test" value="imagenes/foto2.jpg"/>
+    <b:image name="test" value="imagenes/logo trivia.jpg"/>
     <br></br>
     <h:outputLabel value="Nombre: Pedro "/>
     <br></br>
     <h:outputLabel value="Puntos: 965"/> <td></td><td></td><h:commandButton value="JUGAR" action="#{triviaMusicOneQuestion}"/>
+    <br></br>
+    <br></br>
+    <b:image name="test" value="imagenes/logo trivia.jpg"/>
+    <br></br>
+    <h:outputLabel value="Nombre:  #{peopleBean.firstName} "/>
+    <br></br>
+    <h:outputLabel value="Puntos: 1324"/> <td></td><td></td><h:commandButton value="CANCELAR" action="salaMusic"/>
     <br></br>
     <br></br>
 </h:head>
