--- a/web/salaSerie.xhtml
+++ b/web/salaSerie.xhtml
@@ -28,7 +28,7 @@
             <b:navLink value="Cerrar Session" href="index.xhtml"></b:navLink>
         </b:navbarLinks>
     </b:navBar>
-    <b:image name="test" value="imagenes/foto.jpg"/>
+    <b:image name="test" value="imagenes/logo trivia.jpg"/>
     <br></br>
     <h:outputLabel value="Nombre:  #{peopleBean.firstName} "/>
     <br></br>
@@ -41,7 +41,7 @@
         </tr>
     </table>
     <br></br>
-    <b:image name="test" value="imagenes/foto2.jpg"/>
+    <b:image name="test" value="imagenes/logo trivia.jpg"/>
     <br></br>
     <h:outputLabel value="Nombre: Pedro "/>
     <br></br>
