--- a/web/createTriviaMusic.xhtml
+++ b/web/createTriviaMusic.xhtml
@@ -34,18 +34,18 @@
         </tr>
     </table>
     <br></br>
-    <b:image name="test" value="imagenes/logo trivia.jpg"/>
+    <b:image name="test" value="imagenes/foto2.jpg"/>
     <br></br>
     <h:outputLabel value="Nombre: Pedro "/>
     <br></br>
-    <h:outputLabel value="Puntos: 965"/> <td></td><td></td><h:commandButton value="JUGAR" action="#{triviaMusicOneQuestion}"/>
+    <h:outputLabel value="Puntos: 287"/> <td></td><td></td><h:commandButton value="JUGAR" action="triviaMusicOneQuestion"/>
     <br></br>
     <br></br>
-    <b:image name="test" value="imagenes/logo trivia.jpg"/>
+    <b:image name="test" value="imagenes/foto.jpg"/>
     <br></br>
     <h:outputLabel value="Nombre:  #{peopleBean.firstName} "/>
     <br></br>
-    <h:outputLabel value="Puntos: 1324"/> <td></td><td></td><h:commandButton value="CANCELAR" action="salaMusic"/>
+    <h:outputLabel value="Puntos: 420"/> <td></td><td></td><h:commandButton value="CANCELAR" action="salaMusic"/>
     <br></br>
     <br></br>
 </h:head>
