--- a/web/salaMusic.xhtml
+++ b/web/salaMusic.xhtml
@@ -32,7 +32,7 @@
     <br></br>
     <h:outputLabel value="Nombre:  #{peopleBean.firstName} "/>
     <br></br>
-    <h:outputLabel value="Puntos: 1324"/> <td></td><td></td><h:commandButton value="CREAR JUEGO" action="createTrivia"/>
+    <h:outputLabel value="Puntos: 420"/> <td></td><td></td><h:form><h:commandButton value="CREAR JUEGO" action="createTriviaMusic"/></h:form>
     <br></br>
     <br></br>
     <table width="575" border="2" cellspacing="2">
@@ -45,7 +45,7 @@
     <br></br>
     <h:outputLabel value="Nombre: Pedro "/>
     <br></br>
-    <h:outputLabel value="Puntos: 965"/> <td></td><td></td><h:commandButton value="JUGAR" action="#{triviaMusicOneQuestion}"/>
+    <h:outputLabel value="Puntos: 287"/> <td></td><td></td><h:form><h:commandButton value="JUGAR" action="triviaMusicOneQuestion"/></h:form>
     <br></br>
     <br></br>
 </h:head>
