--- a/web/createTriviaSerie.xhtml
+++ b/web/createTriviaSerie.xhtml
@@ -28,13 +28,6 @@
             <b:navLink value="Cerrar Session" href="index.xhtml"></b:navLink>
         </b:navbarLinks>
     </b:navBar>
-    <b:image name="test" value="imagenes/foto.jpg"/>
-    <br></br>
-    <h:outputLabel value="Nombre:  #{peopleBean.firstName} "/>
-    <br></br>
-    <h:outputLabel value="Puntos: 420"/> <td></td><td></td><h:form><h:commandButton value="CREAR JUEGO" action="createTriviaSerie"/></h:form>
-    <br></br>
-    <br></br>
     <table width="575" border="2" cellspacing="2">
         <tr align="center" valign="middle">
             <th colspan="4">PARTICIPANTES</th>
@@ -45,7 +38,14 @@
     <br></br>
     <h:outputLabel value="Nombre: Pedro "/>
     <br></br>
-    <h:outputLabel value="Puntos: 287"/> <td></td><td></td><h:form><h:commandButton value="JUGAR" action="triviaSerieOneQuestion"/></h:form>
+    <h:outputLabel value="Puntos: 287"/> <td></td><td></td><h:commandButton value="JUGAR" action="triviaSerieOneQuestion"/>
+    <br></br>
+    <br></br>
+    <b:image name="test" value="imagenes/foto.jpg"/>
+    <br></br>
+    <h:outputLabel value="Nombre:  #{peopleBean.firstName} "/>
+    <br></br>
+    <h:outputLabel value="Puntos: 420"/> <td></td><td></td><h:commandButton value="CANCELAR" action="salaSerie"/>
     <br></br>
     <br></br>
 </h:head>
