Se actualizo el flujo de navegación

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -41,9 +41,7 @@
 
      <a>  <b:commandButton value="INICIO SESION" action="login"/></a>
 
-        <p><a title="UTP" href="https://www.utp.edu.pe" target="_blank"><img src="imagenes/utp_logo.jpg" alt="UTP" width="100" height="100" /></a></p>
-
-       <p><a title="BBVA" href="https://www.bbvacontinental.pe" target="_blank"><img src="imagenes/logo_bbva.jpg" alt="BBVA" width="80" height="100"/></a></p>
+        <p><a title="UTP" href="https://www.utp.edu.pe" target="_blank"><img src="imagenes/utp_logo.jpg" alt="UTP" width="100" height="100" /></a></p><p><a title="BBVA" href="https://www.bbvacontinental.pe" target="_blank"><img src="imagenes/logo_bbva.jpg" alt="BBVA" width="80" height="100"/></a></p>
 
     </h:form>
 </f:view>
