--- a/web/category.xhtml
+++ b/web/category.xhtml
@@ -15,6 +15,7 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="application/javascript"/>
+    <link href="css/category.css" rel="stylesheet"/>
 </h:head>
 <h:head>
     <b:navBar>
